# MyCodeExamples

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SetOnSplayTree.cpp  UkkonensAlgorithm.cpp
examples/: CMakeLists.txt  interval_tree.cc  set.cc  suffix_tree.cc  tree.cc
include/libalgo/: IntervalTree.hh  SetOnSplayTree.hh  interval_tree.hh  set.hh  suffix_tree.hh  type_check.hh
src/: IntervalTree.cpp  UkkonensAlgorithm.cpp
